Fix positioning of main navigation and ‘more +’ filter button in IE11.
The main navigaiton and ‘more +’ button were positioned too far to the right (partly out of the browser window).

--- a/assets/stylesheets/scss/components/_components.banner.scss
+++ b/assets/stylesheets/scss/components/_components.banner.scss
@@ -12,7 +12,6 @@
 		display: flex;
 		flex-wrap: wrap;
 		align-items: baseline;
-		justify-content: space-between;
 	}
 
 	.template-blog-post & {
