--- a/assets/stylesheets/scss/components/_components.masthead.scss
+++ b/assets/stylesheets/scss/components/_components.masthead.scss
@@ -13,7 +13,7 @@
 	padding-top: rhythm(.5);
 	padding-bottom: rhythm(.5);
 
-	@include breakpoint(compact) {
-		flex: 0;
-	}
+	// @include breakpoint(compact) {
+	// 	flex: 0;
+	// }
 }
